syntax = "proto3";

option csharp_namespace = "Anis.MembersManagment.Query.Test.MembersProto";

package members.query.v1;

import "google/protobuf/timestamp.proto";

service Members {
  rpc GetSubscriptionMembers (GetSubscriptionMembersRequest) returns (GetSubscriptionMembersResponse);
  rpc GetOwnerPendingInvitations (GetOwnerPendingInvitationsRequest) returns (GetOwnerPendingInvitationsResponse);
  rpc GetMemberPendingInvitations (GetMemberPendingInvitationsRequest) returns (GetMemberPendingInvitationsResponse);
  rpc GetMemberSubscriptions (GetMemberSubscriptionsRequest) returns (GetMemberSubscriptionsResponse);
}

message GetSubscriptionMembersRequest {
  string subscription_id = 1;
}

message GetSubscriptionMembersResponse {
   repeated SubscriberOutput Subscribers = 1;
   int32 page = 2;
   int32 page_size = 3;
   int32 total_results = 4;
}

message SubscriberOutput {
   int32 id = 1;
   string subscription_id = 2;
   string subscription_description = 3;
   string user_id = 4;
   string user_name = 5;
   string status = 6;
   google.protobuf.Timestamp joined_at = 7;
}

message GetOwnerPendingInvitationsRequest {
	string owner_id = 1;
}

message GetOwnerPendingInvitationsResponse {
	repeated InvitationOutput invitations = 1;
	int32 page = 2;
    int32 page_size = 3;
    int32 total_results = 4;
}

message InvitationOutput {
	int32 id = 1;
	string subscription_id = 2;
	string subscription_description = 3;
	string member_id = 4;
	string member_name = 5;
	string status = 6;
	google.protobuf.Timestamp sent_at = 7;
}

message GetMemberPendingInvitationsRequest {
	string member_id = 1;
}

message GetMemberPendingInvitationsResponse {
	repeated InvitationOutput invitations = 1;
	int32 page = 2;
    int32 page_size = 3;
    int32 total_results = 4;
}

message GetMemberSubscriptionsRequest {
	string member_id =1;
}

message GetMemberSubscriptionsResponse {
   repeated SubscriberOutput Subscribers = 1;
   int32 page = 2;
   int32 page_size = 3;
   int32 total_results = 4;
}